@@ -1,13 +1,5 @@
 package br.com.dbc.vemser.services;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
-import br.com.dbc.vemser.exceptions.BancoDeDadosException;
 import br.com.dbc.vemser.exceptions.RegraDeNegocioException;
 import br.com.dbc.vemser.mappers.EmailMapper;
 import br.com.dbc.vemser.model.dtos.request.AgendaRequestDTO;
@@ -21,7 +13,14 @@ import br.com.dbc.vemser.model.enums.StatusAgendaEnum;
 import br.com.dbc.vemser.repository.AgendaRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+
+import java.time.format.DateTimeFormatter;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -31,110 +30,120 @@ public class AgendaService {
     private final ObjectMapper objectMapper;
     private final AgendaRepository agendaRepository;
     private final EmailService emailService;
+    private final String RESOURCE_NOT_FOUND = "Não foi encontrada nenhuma agenda com este filtro.";
 
     public AgendaResponseDTO cadastrarHorario(Long idProfissionalMentor, AgendaRequestDTO agendaRequestDTO) throws Exception {
-        List<Agenda> agendamentos = agendaRepository.getAll();
+        List<Agenda> agendamentos = agendaRepository.findAll();
         ProfissionalMentor profissionalMentor = profissionalMentorService.getProfissionalMentor(idProfissionalMentor);
 
         Agenda agenda = objectMapper.convertValue(agendaRequestDTO, Agenda.class);
         agenda.setProfissionalMentor(profissionalMentor);
         agenda.setStatusAgendaEnum(StatusAgendaEnum.DISPONIVEL);
         validarHorarioAgendamento(agenda, agendamentos);
-        return objectMapper.convertValue(agendaRepository.create(agenda), AgendaResponseDTO.class);
+        return objectMapper.convertValue(agendaRepository.save(agenda), AgendaResponseDTO.class);
     }
 
     public AgendaResponseDTO agendarHorario(Long idAgenda, Long idCliente) throws Exception {
-        Agenda agenda = agendaRepository.getById(idAgenda);
+        Agenda agenda = getAgenda(idAgenda);
         Cliente cliente = clienteService.getCliente(idCliente);
 
         validarDisponibilidadeAgenda(agenda);
-        clienteService.validarCliente(cliente);
 
         agenda.setCliente(cliente);
         agenda.setStatusAgendaEnum(StatusAgendaEnum.AGENDADO);
 
-        agendaRepository.update(idAgenda, agenda);
-
-        emailService.sendEmail(EmailMapper.agendaToAgendaEmailDTO(agenda), cliente.getUsuario().getEmail(), EmailTemplate.AGENDAR_HORARIO);
+        agendaRepository.save(agenda);
+        AgendarEmailDTO agendarEmailDTO = criarObjetoEmail(agenda);
+        emailService.sendEmail(agendarEmailDTO, cliente.getUsuario().getEmail(), EmailTemplate.AGENDAR_HORARIO);
         return objectMapper.convertValue(agenda, AgendaResponseDTO.class);
     }
 
+    private AgendarEmailDTO criarObjetoEmail(Agenda agenda) {
+        AgendarEmailDTO agendarEmailDTO = new AgendarEmailDTO();
+        DateTimeFormatter formatterData = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        DateTimeFormatter formatterHora = DateTimeFormatter.ofPattern("hh:mm");
+        agendarEmailDTO.setNome(agenda.getCliente().getUsuario().getNome());
+        agendarEmailDTO.setEmailCliente(agenda.getCliente().getUsuario().getEmail());
+        agendarEmailDTO.setNomeProfissional(agenda.getProfissionalMentor().getUsuario().getNome());
+        agendarEmailDTO.setDataInicio(agenda.getDataHoraInicio().format(formatterData));
+        agendarEmailDTO.setDataFim(agenda.getDataHoraFim().format(formatterData));
+        agendarEmailDTO.setHoraInicio(agenda.getDataHoraInicio().format(formatterHora));
+        agendarEmailDTO.setHoraFim(agenda.getDataHoraFim().format(formatterHora));
+        return agendarEmailDTO;
+    }
+
     public AgendaResponseDTO reagendarHorario(Long idAgendaAtual, Long idNovaAgenda) throws Exception {
-            Agenda agenda = agendaRepository.getById(idAgendaAtual);
-            Agenda novaAgenda = agendaRepository.getById(idNovaAgenda);
+            Agenda agenda = getAgenda(idAgendaAtual);
+            Agenda novaAgenda = getAgenda(idNovaAgenda);
 
             validarDisponibilidadeAgenda(novaAgenda);
 
             novaAgenda.setCliente(agenda.getCliente());
             novaAgenda.setStatusAgendaEnum(StatusAgendaEnum.AGENDADO);
+
             agenda.setCliente(null);
             agenda.setStatusAgendaEnum(StatusAgendaEnum.DISPONIVEL);
-            agendaRepository.update(idNovaAgenda, novaAgenda);
-            agendaRepository.update(idAgendaAtual, agenda);
+
+            agendaRepository.save(novaAgenda);
+            agendaRepository.save(agenda);
             return objectMapper.convertValue(novaAgenda, AgendaResponseDTO.class);
     }
 
     public AgendaResponseDTO getById(Long idAgenda) throws Exception {
-        return objectMapper.convertValue(agendaRepository.getById(idAgenda), AgendaResponseDTO.class);
+        return objectMapper.convertValue(getAgenda(idAgenda), AgendaResponseDTO.class);
     }
 
     public List<AgendaResponseDTO> listAllByStatus(StatusAgendaEnum statusAgendaEnum) throws Exception {
-        return listAll()
-                .stream()
-                .filter(x -> x.getStatusAgendaEnum()
-                        .equals(statusAgendaEnum))
+        List<Agenda> agendamentos = agendaRepository.findByStatusAgendaEnum(statusAgendaEnum);
+        return agendamentos.stream()
+                .map(agendamento -> objectMapper.convertValue(agendamento, AgendaResponseDTO.class))
                 .collect(Collectors.toList());
     }
 
-    public List<AgendaResponseDTO> listAll() throws Exception {
-            List<Agenda> agendamentos = agendaRepository.getAll();
-
-            return agendamentos.stream()
-                    .map(agendamento -> objectMapper.convertValue(agendamento, AgendaResponseDTO.class))
-                    .collect(Collectors.toList());
+    public Page<AgendaResponseDTO> listAll(Pageable pageable) throws Exception {
+        Page<Agenda> agendamentos = agendaRepository.findAll(pageable);
+        return agendamentos.map(agendamento -> objectMapper.convertValue(agendamento, AgendaResponseDTO.class));
     }
 
     public List<AgendaResponseDTO> listAllByCliente(Long idCliente) throws Exception {
-        List<Agenda> agendamentos = agendaRepository.getAll();
+        List<Agenda> agendamentos = agendaRepository.findByCliente_Id(idCliente);
 
         agendamentos = agendamentos.stream()
                 .filter(x -> Objects.nonNull(x.getCliente()))
                 .filter(y -> y.getCliente().getId().equals(idCliente))
-                .collect(Collectors.toList());
+                .toList();
 
         return agendamentos.stream()
                 .map(agendamento -> objectMapper.convertValue(agendamento, AgendaResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AgendaResponseDTO> listAllByProfissional(Long idProfissional) throws Exception {
-        List<Agenda> agendamentos = agendaRepository.getAll();
-
-        agendamentos = agendamentos.stream()
-                .filter(x -> x.getProfissionalMentor().getIdProfissionalMentor().equals(idProfissional))
-                .collect(Collectors.toList());
+        List<Agenda> agendamentos = agendaRepository.findByProfissionalMentor_Id(idProfissional);
 
         return agendamentos.stream()
                 .map(agendamento -> objectMapper.convertValue(agendamento, AgendaResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void delete(Long idAgenda) throws Exception {
-        getAgenda(idAgenda);
-        agendaRepository.delete(idAgenda);
+        Agenda agenda = getAgenda(idAgenda);
+        agendaRepository.delete(agenda);
     }
 
 
-    public void cancelarHorario(Long idAgenda) throws Exception {
-        Agenda agenda = agendaRepository.getById(idAgenda);
+    public void cancelarHorario(Long idAgenda) throws RegraDeNegocioException {
+        Agenda agenda = agendaRepository.findById(idAgenda)
+                .orElseThrow(() -> new RegraDeNegocioException(RESOURCE_NOT_FOUND));
 
         agenda.setCliente(null);
         agenda.setStatusAgendaEnum(StatusAgendaEnum.DISPONIVEL);
-        agendaRepository.update(idAgenda, agenda);
+        agendaRepository.save(agenda);
     }
 
     public Agenda getAgenda(Long idAgenda) throws Exception {
-        return agendaRepository.getById(idAgenda);
+        return agendaRepository.findById(idAgenda)
+                .orElseThrow(() -> new RegraDeNegocioException(RESOURCE_NOT_FOUND));
     }
 
     public boolean validarHorarioAgendamento(Agenda agenda, List<Agenda> agendamentos) throws RegraDeNegocioException {
@@ -143,12 +152,21 @@ public class AgendaService {
             if (!agenda.getProfissionalMentor().equals(agendamento.getProfissionalMentor())) {
                 continue;
             }
+
+            if (agenda.getDataHoraInicio().isEqual(agenda.getDataHoraFim())) {
+                throw new RegraDeNegocioException("❌ Não é possível agendar com mesma data e horário em início e fim.");
+            }
+
+            if (agenda.getDataHoraFim().isBefore(agenda.getDataHoraInicio())) {
+                throw new RegraDeNegocioException("❌ Não é possível agendar se a data de fim for menor que a data de início.");
+            }
+
             //início igual ou maior ao início de outra agenda
             if ((agenda.getDataHoraInicio().isEqual(agendamento.getDataHoraInicio())
                     || agenda.getDataHoraInicio().isAfter(agendamento.getDataHoraInicio()))
                 &&
                     (agenda.getDataHoraInicio().isBefore(agendamento.getDataHoraFim()))) {
-                throw new RegraDeNegocioException("❌ Não é possível cadastrar neste horário, está havendo 'intercessão de horários'.");
+                throw new RegraDeNegocioException("❌ O profissional já possui agendamento neste horário, agendamento cancelado.");
             }
 
             //fim igual ou menor ao fim de outra agenda
@@ -156,7 +174,7 @@ public class AgendaService {
                     || agenda.getDataHoraFim().isBefore(agendamento.getDataHoraFim()))
                 &&
                 (agenda.getDataHoraFim().isAfter(agendamento.getDataHoraInicio()))) {
-                throw new RegraDeNegocioException("❌ Não é possível cadastrar neste horário, está havendo 'intercessão de horários'.");
+                throw new RegraDeNegocioException("❌ O profissional já possui agendamento neste horário, agendamento cancelado.");
             }
         }
         return true;
